fix splitter z-index error

--- a/plugins/teedoc-plugin-theme-default/teedoc_plugin_theme_default/assets/light.css
+++ b/plugins/teedoc-plugin-theme-default/teedoc_plugin_theme_default/assets/light.css
@@ -241,7 +241,6 @@ code {
     transition: 0.2s;
     border-radius: 5px;
     display: block;
-    z-index: 99;
 }
 
 .gutter.gutter-horizontal {
